<resources>
    <string name="app_name">Unimate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">알림</string>
    <string name="today_tasks">오늘의 일</string>
    <string name="personal_schedule">개인일정</string>
    <string name="my_team_space">나의 팀 스페이스</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="participating_teams">참여중인 팀플</string>
    <string name="completed_teams">완료된 팀플</string>
    <string name="personal_schedule_only">개인일정</string>
    <string name="personal">개인</string>
    <string name="calendar_filter">캘린더 필터</string>
    <string name="date_format_year_month">%1$d년 %2$d월</string>
    <string name="date_format_full">%1$d년 %2$d월 %3$d일</string>
    <string name="date_format_month_day">%1$d월 %2$d일</string>
    <string name="prev_month">이전 월</string>
    <string name="next_month">다음 월</string>
    <string name="prev_week">이전 주</string>
    <string name="next_week">다음 주</string>
    <string name="add_schedule">일정 추가</string>
    <string name="status_progress">진행중</string>
    <string name="status_members">팀원 %1$d명</string>
    <string name="deadline_d">마감 D-%1$d</string>
    <string name="confirm">확인</string>
    <string name="no_schedule">일정이 없습니다</string>
    <string name="edit">편집</string>
    <string name="team_intro_suffix">소개/규정</string>
    <string name="team_members_title">함께하는 팀원 %1$d</string>
    <string name="team_schedule_title">팀 일정 %1$d</string>
    <string name="team_calendar_team_label">팀</string>
    <string name="select_meeting_date">모임 날짜 선택</string>
    <string name="no_schedule_members">일정 없는 팀원</string>
    <string name="team_space_edit">팀 스페이스 수정</string>
    <string name="delete_team">팀 스페이스 삭제</string>
    <string name="team_name_required">팀명 (필수)</string>
    <string name="team_intro_optional">팀 소개 (선택)</string>
    <string name="team_work_period_required">팀 작업일 (필수)</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="set_ended_team">종료된 팀으로 설정</string>
    <string name="complete">완료</string>
    <string name="enter_team_name">팀 명을 입력하세요.</string>
    <string name="introduce_team">팀을 소개하세요.</string>
    <string name="join_team_by_code">초대코드로 팀 참여</string>
    <string name="join_team_code_hint">팀장이 공유한 6자리 코드를 입력하세요!</string>
    <string name="enter_invitation_code">초대코드를 입력하세요.</string>
    <string name="join">참여하기</string>
    <string name="join_complete">참여완료</string>
    <string name="cancel">취소</string>
    <string name="team_join_complete_toast">팀 참여가 완료됐어요</string>
    <string name="new_schedule">새 일정</string>
    <string name="schedule_edit">일정 편집</string>
    <string name="save">저장</string>
    <string name="team">팀</string>
    <string name="enter_schedule_name">일정명을 입력하세요.</string>
    <string name="all_day">하루 종일</string>
    <string name="none">없음</string>
    <string name="yes_notification">있음</string>
    <string name="schedule_category">일정 카테고리</string>
    <string name="select">선택</string>
    <string name="public_visibility">공개</string>
    <string name="private_visibility">나만 보기</string>
    <string name="team_space">팀 스페이스</string>
    <string name="category_part_time">아르바이트</string>
    <string name="category_other_team">다른 팀플</string>
    <string name="category_meeting">회의</string>
    <string name="category_exam">시험</string>
    <string name="category_health">건강(병원)</string>
    <string name="category_etc">기타(사유 입력)</string>

    <!-- 타임픽 -->
    <string name="timepick_select_dates">가능한 날짜 선택</string>
    <string name="timepick_multiple">(복수선택)</string>
    <string name="timepick_select_times">가능한 시간 선택</string>
    <string name="timepick_selected_dates">선택한 날짜</string>
    <string name="timepick_select_start_time">시작시간을 선택하세요.</string>
    <string name="timepick_select_end_time">종료시간을 선택하세요.</string>
    <string name="timepick_next">다음</string>
    <string name="timepick_done">완료</string>
    <string name="timepick_select_at_least_one">가능한 시간을 선택해주세요.</string>
    <string name="timepick_meeting_full_schedule">모임 전체 시간표</string>
    <string name="timepick_participants">%1$d/%2$d명 참여</string>
    <string name="timepick_all_available">모두 가능한 시간</string>
    <string name="timepick_filter_all">전체</string>
    <string name="timepick_edit_time">시간 수정하기</string>
    <string name="timepick_confirm_meeting">모이기 일정 확정</string>
    <string name="timepick_edit_meeting_title">모이기 일정 편집</string>
</resources>